[gd_scene load_steps=7 format=2]

[ext_resource path="res://Videojoc/Scripts/LevelsMenu.gd" type="Script" id=1]
[ext_resource path="res://Videojoc/GFX/Background/bg_layer1.png" type="Texture" id=2]
[ext_resource path="res://Videojoc/Fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Videojoc/SFX/Ship.ogg" type="AudioStream" id=4]


[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 3 )

[node name="LevelsMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 435.001
margin_top = 121.0
margin_right = 567.001
margin_bottom = 167.0

[node name="Label" type="Label" parent="CenterContainer"]
margin_right = 132.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "Levels"
__meta__ = {
"_edit_lock_": true
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 458.001
margin_top = 218.001
margin_right = 540.001
margin_bottom = 245.001

[node name="Label" type="Label" parent="TextureButton"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "Level 1"
__meta__ = {
"_edit_lock_": true
}

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 458.001
margin_top = 263.001
margin_right = 540.001
margin_bottom = 290.001

[node name="Label" type="Label" parent="TextureButton2"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "Level 2
"
__meta__ = {
"_edit_lock_": true
}

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = 457.001
margin_top = 311.001
margin_right = 539.001
margin_bottom = 338.001

[node name="Label" type="Label" parent="TextureButton3"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "Level 3
"
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_TextureButton3_pressed"]
